# python_modules

00/ex00/: answers.txt  requirements.txt
00/ex01/: exec.py
00/ex02/: whois.py
00/ex03/: count.py
00/ex04/: operations.py
00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
00/ex06/: recipe.py
00/ex07/: filterwords.py
00/ex08/: sos.py
00/ex09/: guess.py
00/ex10/: loading.py
01/ex00/: book.py  recipe.py  test.py
01/ex01/: game.py
01/ex02/: test.py  vector.py
01/ex03/: generator.py
01/ex04/: eval.py
01/ex05/: the_bank.py
02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
02/ex01/: main.py
02/ex02/: logger.py
02/ex03/: csvreader.py
02/ex04/: LICENCE.txt  README.md  build.sh  setup.cfg
02/ex04/my_minipack/: logger.py  progressbar.py
