[metadata]:
name = my_minipack
version = 1.0.0
summary =  How to create a package in python.
Home-page = None
Author =  ylagtab
Author-email =  ylagtab@student.1337.ma`
License =  MIT
Location =  [PATH TO BOOTCAMP PYTHON]/module02/tmp_env/lib/python3.7/site-packages
Requires =
Required-by =
Metadata-Version = 2.1
Installer =  pip
Classifiers =
    Development_Status :: 3 - Alpha
    Intended Audience  Developers
    Intended Audience :: Students
    Topic :: Education
    Topic :: HowTo
    Topic :: Package
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]:
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .